--- a/templates/admin.html
+++ b/templates/admin.html
@@ -18,7 +18,7 @@
                         <a>有云服务器资源管理</a>
                     </li>
                     <li>
-                        <a href="/property/idc_all/">查看主机列表</a>
+                        <a href="/idc_all/">查看主机列表</a>
                     </li>
                 </ul>
             </div>
@@ -42,7 +42,7 @@
                                     <tr>
                                         <td>{{ forloop.counter }}</td>
                                         <td>
-                                            <a href="/property/env/?lanuage_id={{ l.id }}">{{ l.lanuage }}</a>
+                                            <a href="/env/?lanuage_id={{ l.id }}">{{ l.lanuage }}</a>
                                         </td>
                                     </tr>
                                 {% endfor %}
