--- a/templates/app_edit.html
+++ b/templates/app_edit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="/property/app_edit/?lanuage_id={{ lanuage_id }}&env_id={{ env_id }}&application_id={{ application_id }}" method="post">
+<form action="/app_edit/?lanuage_id={{ lanuage_id }}&env_id={{ env_id }}&application_id={{ application_id }}" method="post">
     应用:<input type="text" name="app">
     <input type="submit">
 </form>
