--- a/templates/app_idc_add.html
+++ b/templates/app_idc_add.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="/property/app_idc_add/?idc_id={{ idc_id }}" method="post">
+<form action="/app_idc_add/?idc_id={{ idc_id }}" method="post">
     应用:<input type="text" name="app">
     <input type="submit">
 </form>
