--- a/templates/domain_add.html
+++ b/templates/domain_add.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="/property/domain_add/?application_id={{ application_id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}" method="post">
+<form action="/domain_add/?application_id={{ application_id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}" method="post">
     域名:<input type="text" name="domain">
     <input type="submit">
 </form>
