--- a/templates/domain_edit.html
+++ b/templates/domain_edit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="/property/domain_edit/?lanuage_id={{ lanuage_id }}&env_id={{ env_id }}&application_id={{ application_id }}&domain_id={{ domain_id }}" method="post">
+<form action="/domain_edit/?lanuage_id={{ lanuage_id }}&env_id={{ env_id }}&application_id={{ application_id }}&domain_id={{ domain_id }}" method="post">
     应用:<input type="text" name="domain">
     <input type="submit">
 </form>
