--- a/templates/env_add.html
+++ b/templates/env_add.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="/property/env_add/?lanuage_id={{ lanuage_id }}" method="post">
+<form action="/env_add/?lanuage_id={{ lanuage_id }}" method="post">
     环境:<input type="text" name="env">
     <input type="submit">
 </form>
