--- a/templates/env_edit.html
+++ b/templates/env_edit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="/property/env_edit/?lanuage_id={{ lanuage_id }}&env_id={{ env_id }}" method="post">
+<form action="/env_edit/?lanuage_id={{ lanuage_id }}&env_id={{ env_id }}" method="post">
     环境:<input type="text" name="env">
     <input type="submit">
 </form>
