--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,7 @@
                             </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="/property/host_list/?id={{ e.id }}&lanuage_id={{ e.lanuage_id }}">查看</a>
+                                <a href="/host_list/?id={{ e.id }}&lanuage_id={{ e.lanuage_id }}">查看</a>
                             </li>
                         </ul>
                         </li>
@@ -112,8 +112,8 @@
                     <div class="panel-heading">语言分类</div>
                     <div class="panel-body">
                         <ul class="blog-types" >
-                            <li><a href="/property/env_list/?id=1" >.NET</a></li>
-                            <li><a href="/property/env_list/?id=2" >JAVA</a></li>
+                            <li><a href="/env_list/?id=1" >.NET</a></li>
+                            <li><a href="/env_list/?id=2" >JAVA</a></li>
                         </ul>
                     </div>
                 </div>
