--- a/templates/idc_add.html
+++ b/templates/idc_add.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="/property/idc_add/?application_id={{ application_id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}" method="post">
+<form action="/idc_add/?application_id={{ application_id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}" method="post">
     ip地址:<input type="text" name="ip">
     <input type="submit">
 </form>
