--- a/templates/idc_all_add.html
+++ b/templates/idc_all_add.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="/property/idc_all_add/" method="post">
+<form action="/idc_all_add/" method="post">
     云厂商:<input type="text" name="vendors">
     系统:<input type="text" name="system">
     地区:<input type="text" name="region">
