--- a/templates/idc_edit.html
+++ b/templates/idc_edit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="/property/idc_edit/?lanuage_id={{ lanuage_id }}&env_id={{ env_id }}&application_id={{ application_id }}&idc_id={{ idc_id }}&field={{ field }}" method="post">
+<form action="/idc_edit/?lanuage_id={{ lanuage_id }}&env_id={{ env_id }}&application_id={{ application_id }}&idc_id={{ idc_id }}&field={{ field }}" method="post">
     {% if field == 'vendors' %}
         云厂商:<input type="text" name="vendors">
     {% elif field == 'system' %}
