--- a/templates/language_add.html
+++ b/templates/language_add.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="/property/language_add/" method="post">
+<form action="/language_add/" method="post">
     语言类别:<input type="text" name="lanuage">
     <input type="submit">
 </form>
