--- a/templates/app.html
+++ b/templates/app.html
@@ -1,42 +1,3 @@
-{#<!DOCTYPE html>#}
-{#<html lang="zh-CN">#}
-{#<head>#}
-{#    <meta http-equiv="content-Type" charset="UTF-8">#}
-{#    <meta http-equiv="x-ua-compatible" content="IE=edge">#}
-{#    <meta name="viewport" content="width=device-width, initial-scale=1">#}
-{#    <title>应用列表页面</title>#}
-{#</head>#}
-{#<body>#}
-{##}
-{#<h1>应用列表</h1>#}
-{#<a href="/property/app_add/?id={{ env_id }}&lanuage_id={{ lanuage_id }}">添加应用</a>#}
-{#<a href="/property/env/?id={{ lanuage_id }}">返回</a>#}
-{##}
-{#<table border="1">#}
-{#    <thead>#}
-{#    <tr>#}
-{#        <th>序号</th>#}
-{#        <th>应用</th>#}
-{#        <th>操作</th>#}
-{#    </tr>#}
-{#    </thead>#}
-{#    <tbody>#}
-{#    {% for i in ret_app %}#}
-{#        <tr>#}
-{#            <td>{{ forloop.counter }}</td>#}
-{#            <td>{{ i.application }}</td>#}
-{#            <td>#}
-{#                <a href="/property/domain/?id={{ i.id }}&env_id={{ i.env_id }}&lanuage_id={{ lanuage_id }}">查看域名</a>#}
-{#                <a href="/property/idc/?id={{ i.id }}&env_id={{ i.env_id }}&lanuage_id={{ lanuage_id }}">查看主机</a>#}
-{#                <a href="/property/app_del/?id={{ i.id }}&lanuage_id={{ lanuage_id }}">删除</a>#}
-{#            </td>#}
-{#        </tr>#}
-{#    {% endfor %}#}
-{#    </tbody>#}
-{#</table>#}
-{##}
-{#</body>#}
-{#</html>#}
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -54,13 +15,13 @@
             <div class="navbar-header">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/property/admin/">有云服务器资源管理</a>
+                        <a href="/admin/">有云服务器资源管理</a>
                     </li>
                      <li>
-                        <a href="/property/app_add/?env_id={{ env_id }}&lanuage_id={{ lanuage_id }}">添加应用</a>
+                        <a href="/app_add/?env_id={{ env_id }}&lanuage_id={{ lanuage_id }}">添加应用</a>
                     </li>
                     <li>
-                        <a href="/property/env/?lanuage_id={{ lanuage_id }}">返回</a>
+                        <a href="/env/?lanuage_id={{ lanuage_id }}">返回</a>
                     </li>
                 </ul>
             </div>
@@ -86,10 +47,10 @@
                                         <td>{{ forloop.counter }}</td>
                                         <td>{{ a.application }}</td>
                                         <td>
-                                            <a href="/property/domain/?application_id={{ a.id }}&env_id={{ a.env_id }}&lanuage_id={{ lanuage_id }}">查看域名</a>
-                                            <a href="/property/idc/?application_id={{ a.id }}&env_id={{ a.env_id }}&lanuage_id={{ lanuage_id }}">查看主机</a>
-                                            <a href="/property/app_edit/?application_id={{ a.id }}&lanuage_id={{ lanuage_id }}&env_id={{ env_id }}">编辑</a>
-                                            <a href="/property/app_del/?application_id={{ a.id }}&lanuage_id={{ lanuage_id }}">删除</a>
+                                            <a href="/domain/?application_id={{ a.id }}&env_id={{ a.env_id }}&lanuage_id={{ lanuage_id }}">查看域名</a>
+                                            <a href="/idc/?application_id={{ a.id }}&env_id={{ a.env_id }}&lanuage_id={{ lanuage_id }}">查看主机</a>
+                                            <a href="/app_edit/?application_id={{ a.id }}&lanuage_id={{ lanuage_id }}&env_id={{ env_id }}">编辑</a>
+                                            <a href="/app_del/?application_id={{ a.id }}&lanuage_id={{ lanuage_id }}">删除</a>
                                         </td>
                                     </tr>
                                 {% endfor %}
