--- a/templates/app_add.html
+++ b/templates/app_add.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="/property/app_add/?env_id={{ env_id }}&lanuage_id={{ lanuage_id }}" method="post">
+<form action="/app_add/?env_id={{ env_id }}&lanuage_id={{ lanuage_id }}" method="post">
     应用:<input type="text" name="app">
     <input type="submit">
 </form>
