--- a/templates/app_idc_list.html
+++ b/templates/app_idc_list.html
@@ -15,13 +15,13 @@
             <div class="navbar-header">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/property/admin/">有云服务器资源管理</a>
+                        <a href="/admin/">有云服务器资源管理</a>
                     </li>
                      <li>
-                        <a href="/property/app_idc_add/?idc_id={{ idc_id }}">关联应用</a>
+                        <a href="/app_idc_add/?idc_id={{ idc_id }}">关联应用</a>
                     </li>
                     <li>
-                        <a href="/property/idc_all/">返回</a>
+                        <a href="/idc_all/">返回</a>
                     </li>
                 </ul>
             </div>
@@ -47,7 +47,7 @@
                                         <td>{{ forloop.counter }}</td>
                                         <td>{{ a.application }}</td>
                                         <td>
-                                            <a href="/property/app_idc_del/?application_id={{ a.id }}&idc_id={{ idc_id }}">删除</a>
+                                            <a href="/app_idc_del/?application_id={{ a.id }}&idc_id={{ idc_id }}">删除</a>
                                         </td>
                                     </tr>
                                 {% endfor %}
