--- a/templates/domain.html
+++ b/templates/domain.html
@@ -1,42 +1,3 @@
-{#<!DOCTYPE html>#}
-{#<html lang="zh-CN">#}
-{#<head>#}
-{#    <meta http-equiv="content-Type" charset="UTF-8">#}
-{#    <meta http-equiv="x-ua-compatible" content="IE=edge">#}
-{#    <meta name="viewport" content="width=device-width, initial-scale=1">#}
-{#    <title>域名列表页面</title>#}
-{#</head>#}
-{#<body>#}
-{##}
-{#<h1>域名列表</h1>#}
-{#<a href="/property/domain_add/?id={{ application_id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}">添加域名</a>#}
-{#<a href="/property/app/?id={{ env_id }}&lanuage_id={{ lanuage_id }}">返回</a>#}
-{##}
-{#<table border="1">#}
-{#    <thead>#}
-{#    <tr>#}
-{#        <th>序号</th>#}
-{#        <th>域名</th>#}
-{#        <th>操作</th>#}
-{#    </tr>#}
-{#    </thead>#}
-{#    <tbody>#}
-{#    {% for i in ret_domain %}#}
-{#        <tr>#}
-{#            <td>{{ forloop.counter }}</td>#}
-{#            <td>#}
-{#                <a href="/">{{ i.domain }}</a>#}
-{#            </td>#}
-{#            <td>#}
-{#                <a href="/property/domain_del/?id={{ i.id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}">删除</a>#}
-{#            </td>#}
-{#        </tr>#}
-{#    {% endfor %}#}
-{#    </tbody>#}
-{#</table>#}
-{##}
-{#</body>#}
-{#</html>#}
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -54,13 +15,13 @@
             <div class="navbar-header">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/property/admin/">有云服务器资源管理</a>
+                        <a href="/admin/">有云服务器资源管理</a>
                     </li>
                      <li>
-                        <a href="/property/domain_add/?application_id={{ application_id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}">添加域名</a>
+                        <a href="/domain_add/?application_id={{ application_id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}">添加域名</a>
                     </li>
                     <li>
-                        <a href="/property/app/?env_id={{ env_id }}&lanuage_id={{ lanuage_id }}">返回</a>
+                        <a href="/app/?env_id={{ env_id }}&lanuage_id={{ lanuage_id }}">返回</a>
                     </li>
                 </ul>
             </div>
@@ -86,8 +47,8 @@
                                         <td>{{ forloop.counter }}</td>
                                         <td>{{ d.domain }}</td>
                                         <td>
-                                            <a href="/property/domain_del/?domain_id={{ d.id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}">删除</a>
-                                            <a href="/property/domain_edit/?domain_id={{ d.id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}&application_id={{ application_id }}">编辑</a>
+                                            <a href="/domain_del/?domain_id={{ d.id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}">删除</a>
+                                            <a href="/domain_edit/?domain_id={{ d.id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}&application_id={{ application_id }}">编辑</a>
                                         </td>
                                     </tr>
                                 {% endfor %}
