--- a/templates/env.html
+++ b/templates/env.html
@@ -1,43 +1,3 @@
-{#<!DOCTYPE html>#}
-{#<html lang="zh-CN">#}
-{#<head>#}
-{#    <meta http-equiv="content-Type" charset="UTF-8">#}
-{#    <meta http-equiv="x-ua-compatible" content="IE=edge">#}
-{#    <meta name="viewport" content="width=device-width, initial-scale=1">#}
-{#    <title>环境列表页面</title>#}
-{#</head>#}
-{#<body>#}
-{##}
-{#<h1>环境列表</h1>#}
-{#<a href="/property/env_add/?id={{ lanuage_id }}">添加环境</a>#}
-{#<a href="/property/language">返回</a>#}
-{#<a href="/project_add/">添加项目</a>#}
-{##}
-{#<table border="1">#}
-{#    <thead>#}
-{#    <tr>#}
-{#        <th>序号</th>#}
-{#        <th>环境</th>#}
-{#        <th>操作</th>#}
-{#    </tr>#}
-{#    </thead>#}
-{#    <tbody>#}
-{#    {% for i in env_ret %}#}
-{#        <tr>#}
-{#            <td>{{ forloop.counter }}</td>#}
-{#            <td>#}
-{#                <a href="/property/app/?id={{ i.id }}&lanuage_id={{ i.lanuage_id }}">{{ i.env }}</a>#}
-{#            </td>#}
-{#            <td>#}
-{#                <a href="/property/env_del/?id={{ i.id }}">删除</a>#}
-{#            </td>#}
-{#        </tr>#}
-{#    {% endfor %}#}
-{#    </tbody>#}
-{#</table>#}
-{##}
-{#</body>#}
-{#</html>#}
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -55,13 +15,13 @@
             <div class="navbar-header">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/property/admin/">有云服务器资源管理</a>
+                        <a href="/admin/">有云服务器资源管理</a>
                     </li>
                      <li>
-                        <a href="/property/env_add/?lanuage_id={{ lanuage_id }}">添加环境</a>
+                        <a href="/env_add/?lanuage_id={{ lanuage_id }}">添加环境</a>
                     </li>
                     <li>
-                        <a href="/property/admin">返回</a>
+                        <a href="/admin">返回</a>
                     </li>
                 </ul>
             </div>
@@ -86,11 +46,11 @@
                                     <tr>
                                         <td>{{ forloop.counter }}</td>
                                         <td>
-                                            <a href="/property/app/?env_id={{ e.id }}&lanuage_id={{ e.lanuage_id }}">{{ e.env }}</a>
+                                            <a href="/app/?env_id={{ e.id }}&lanuage_id={{ e.lanuage_id }}">{{ e.env }}</a>
                                         </td>
                                         <td>
-                                            <a href="/property/env_del/?env_id={{ e.id }}">删除</a>
-                                            <a href="/property/env_edit/?lanuage_id={{ lanuage_id }}&env_id={{ e.id }}">编辑</a>
+                                            <a href="/env_del/?env_id={{ e.id }}">删除</a>
+                                            <a href="/env_edit/?lanuage_id={{ lanuage_id }}&env_id={{ e.id }}">编辑</a>
                                         </td>
                                     </tr>
                                 {% endfor %}
