--- a/templates/env_list.html
+++ b/templates/env_list.html
@@ -15,7 +15,7 @@
             <div class="navbar-header">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/property/home/">首页</a>
+                        <a href="/home/">首页</a>
                     </li>
                 </ul>
                 <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
@@ -28,7 +28,7 @@
                 <ul class="nav navbar-nav">
                     {% for e in env_ret %}
                         <li>
-                            <a href="/property/host_list/?env_id={{ e.id }}&lanuage_id={{ e.lanuage_id }}">{{ e.env }}</a>
+                            <a href="/host_list/?env_id={{ e.id }}&lanuage_id={{ e.lanuage_id }}">{{ e.env }}</a>
                         </li>
                     {% endfor %}
                 </ul>
@@ -105,8 +105,8 @@
                     <div class="panel-heading">语言分类</div>
                     <div class="panel-body">
                         <ul class="blog-types" >
-                            <li><a href="/property/env_list/?id=1" >.NET</a></li>
-                            <li><a href="/property/env_list/?id=2" >JAVA</a></li>
+                            <li><a href="/env_list/?id=1" >.NET</a></li>
+                            <li><a href="/env_list/?id=2" >JAVA</a></li>
                         </ul>
                     </div>
                 </div>
