--- a/templates/idc_application.html
+++ b/templates/idc_application.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>关联成功</h1>
-<a href="/property/app/?id={{ application_id }}">返回</a>
+<a href="/app/?id={{ application_id }}">返回</a>
 </body>
 </html>
