--- a/templates/env.html
+++ b/templates/env.html
@@ -15,13 +15,13 @@
             <div class="navbar-header">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/admin/">有云服务器资源管理</a>
+                        <a href="/cmdb_admin/">有云服务器资源管理</a>
                     </li>
                      <li>
                         <a href="/env_add/?lanuage_id={{ lanuage_id }}">添加环境</a>
                     </li>
                     <li>
-                        <a href="/admin">返回</a>
+                        <a href="/cmdb_admin">返回</a>
                     </li>
                 </ul>
             </div>
