--- a/templates/app_idc_list.html
+++ b/templates/app_idc_list.html
@@ -15,7 +15,7 @@
             <div class="navbar-header">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/admin/">有云服务器资源管理</a>
+                        <a href="/cmdb_admin/">有云服务器资源管理</a>
                     </li>
                      <li>
                         <a href="/app_idc_add/?idc_id={{ idc_id }}">关联应用</a>
