--- a/templates/idc.html
+++ b/templates/idc.html
@@ -15,7 +15,7 @@
             <div class="navbar-header">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/admin/">有云服务器资源管理</a>
+                        <a href="/cmdb_admin/">有云服务器资源管理</a>
                     </li>
                      <li>
                         <a href="/idc_add/?application_id={{ application_id }}&env_id={{ env_id }}&lanuage_id={{ lanuage_id }}">添加主机</a>
