--- a/templates/idc_all.html
+++ b/templates/idc_all.html
@@ -15,7 +15,7 @@
             <div class="navbar-header">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/admin/">有云服务器资源管理</a>
+                        <a href="/cmdb_admin/">有云服务器资源管理</a>
                     </li>
                      <li>
                         <a href="/idc_all_add/">创建主机</a>
