--- a/templates/env.html
+++ b/templates/env.html
@@ -21,7 +21,7 @@
                         <a href="/env_add/?lanuage_id={{ lanuage_id }}">添加环境</a>
                     </li>
                     <li>
-                        <a href="/cmdb_admin">返回</a>
+                        <a href="/cmdb_admin/">返回</a>
                     </li>
                 </ul>
             </div>
